package PAI.domain.courseEditionEnrolment;

import java.util.Set;

public interface ICourseEditionEnrolmentListFactory {

    Set<CourseEditionEnrolment> getCourseEditionEnrolmentList();
}
